# verus-fixed-point

./: Cargo.toml  README.md
docs/: design.md  verified-fixed-point-architecture.md
src/: lib.rs  runtime_fixed_point.rs
src/fixed_point/: arithmetic.rs  comparison.rs  constructors.rs  interval.rs  limbs.rs  mod.rs  modular.rs  newton_convergence.rs  ntt.rs  pow2.rs  promotion.rs  reduce.rs  view_lemmas.rs
