[package]
name = "verus-fixed-point"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { path = "../verus/source/vstd" }
verus-rational = { path = "../verus-rational" }
verus-interval-arithmetic = { path = "../verus-interval-arithmetic" }
verus-quadratic-extension = { path = "../verus-quadratic-extension" }
verus-algebra = { path = "../verus-algebra" }

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
